paypal z-index fixed

--- a/components/modals/cashPaymentClientDetails.module.css
+++ b/components/modals/cashPaymentClientDetails.module.css
@@ -7,7 +7,7 @@
 	display: grid;
 	place-items: center;
 	background-color: rgba(0, 0, 0, 0.7);
-	z-index: 10;
+	z-index: 999;
 	transform: scale(0);
 	/* transition: all 1s 0.2s; */
 }
